remove bug that results in text in tables not being centrally aligned

--- a/src/index.css
+++ b/src/index.css
@@ -505,6 +505,7 @@ input[type="boolean"] {
   display: flex;
   justify-content: center;
   align-items: up;
+  text-align: center;
 }
 
 table {
